--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
   /*padding: 20px 0;*/
   margin: 0 auto;
   max-width: 100%;
+  background-color: white;
  
 
 }
@@ -32,9 +33,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-
-
 }
 
 .page {
@@ -42,20 +40,15 @@ body {
 }
 
 #greeting {
-
   font-family: "Shrikhand";
   font-size: 50px;
   letter-spacing: 5px;
   text-align: center;
   color: white;
   position: relative;
-
-
-  
-
 }
 
-/*Christine Chen in the upper corner*/
+
 #home {
   font-family: "Unica One";
   font-size: 80px;
@@ -63,7 +56,6 @@ body {
   text-align: center;
   position: relative;
   color: white;
-
 }
 
 
@@ -71,7 +63,7 @@ body {
 .about-container {
   padding: 15% 0 15% 0;
   height: 50vh;
-  background-color: black;
+  
   position: relative;
 
   list-style: none;
@@ -97,34 +89,6 @@ body {
   height: auto;
   max-width: 50%;
 }
-
-.parent {
-  background-color: black;
-  position: relative;
-}
-
-.item {
-  size: cover;
-
-  min-width: 25%;
-  width: auto;
-  height: auto;
-  max-width: 45%;
-  
-  background: blue;
-  color: white;
-  line-height: 50px;
-  
-}
-
-.parent {
-  display: flex;
-  height: 200px;
-
-}
-
-
-
 
 
 #head {
