--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
@@ -41,6 +42,26 @@ body {
   overflow: hidden;
 }
 
+.video-container {
+  text-align: center;
+
+}
+
+#project-title {
+  color: black;
+  font-family: "Shrikhand";
+  font-size: 30px;
+  
+  text-align: center;
+  position: relative;
+  height: 20vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #greeting {
   font-family: "Shrikhand";
   font-size: 50px;
@@ -67,14 +88,12 @@ body {
   height: 50vh;
   
   position: relative;
-
   list-style: none;
   
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   flex-flow: row wrap;
   justify-content: space-around;
 }
