--- a/index.css
+++ b/index.css
@@ -5,53 +5,279 @@
   color: inherit;
 }
 
+html {
+  height:100%;
+}
 body {
   /*padding: 20px 0;*/
   margin: 0 auto;
   max-width: 100%;
+  height:100%;
   background-color: white;
- 
-
 }
 
-
-/*front landing page thingy*/
-#title-box {
-
-  background-image: url("assets/cloud.jpg");
+.titleArea {
+  height: 100%;
+  background: linear-gradient(rgba(0, 153, 255,0.97), rgba(36, 171, 228,0.17)),  url(assets/city.png) no-repeat bottom;
   background-size: cover;
-
-  height: 100vh;
-  width: 100%;
-
-  min-height: 100%;
-  min-width: 100%;
-
-  max-width: 100%;
-  max-height: 100%;
-
-  position: relative;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-bottom: 20px;
 }
 
-.page {
-  overflow: hidden;
+
+.project {
+
+  padding-right: 10%;
+  padding-left: 10%;
 }
 
-.video-container {
+
+.buttons {
+  height: 75px;
+  padding-right: 10%;
+  padding-left: 10%
+  margin-bottom: 20px;
+}
+
+.projectText{
+  color: white;
+  text-align: center;
+  font-family: "Dosis";
+  font-weight: 200;
+  font-size: 15px;
+
+  padding-left: 3%;
+  padding-right: 3%;
+}
+.projectText1{
+  color: white;
+  text-align: center;
+  font-family: "Dosis";
+  font-weight: 200;
+  font-size: 13px;
+
+  padding-left: 3%;
+  padding-right: 3%;
+}
+.date {
+  text-align: center;
+  font-family: "Dosis";
+  font-weight: 200;
+  font-size: 15px;
+  color:#c2c3c7;
+}
+.date1 {
+  text-align: center;
+  font-family: "Dosis";
+  font-weight: 200;
+  font-size: 13px;
+  color:#c2c3c7;
+}
+
+.projectTitleText{
+  padding-top: 10%;
+  color: white;
+  font-weight: 200;
+  font-size: 25px;
+  text-align: center;
+  font-family: "Raleway";
+}
+
+
+.overlay {
+  position: absolute;
+
+
+  height: inherit;
+  left: 0;
+  right: 0;
+
+  opacity: 0;
+  transition: .5s ease;
+  background-color: white;
+  background-color: #008CBA;
+}
+
+.natbus:hover .overlay {
+  opacity: 0.8;
+}
+.cair:hover .overlay {
+  opacity: 0.8;
+}
+.micromouse:hover .overlay {
+  opacity: 0.8;
+}
+.skittle:hover .overlay {
+  opacity: 0.8;
+}
+.bug:hover .overlay {
+  opacity: 0.8;
+}
+.navigator:hover .overlay {
+  opacity: 0.8;
+}
+
+.text {
+  text-align: right;
+  font-weight: 200;
+}
+
+.aboutMe {
+  padding-right: 10%;
+  padding-left: 10%
+  height: 300px;
+  margin-bottom: 20px;
+}
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button2 {
+    background-color: white; 
+    color: black; 
+    border: 0px solid #008CBA;
+    border-radius: 8px;
+    font-size: 15px;
+    font-family: 'Dosis', sans-serif;
+
+
+
+}
+
+.button2:hover {
+/*    background-color: #008CBA;
+*/    color: #008CBA;
+
+}
+
+.title {
+  margin-top: 26%;
+  height: 250px;
+  text-align: center;
+  margin-right: 5%;
+}
+
+.img {
+  height:250px;
+  margin-top: 4%;
+  /*transform: scale(0.5, 0.5);*/
+}
+
+.myHead {
+  height: 200px;
+  background-size: cover;
+}
+
+.text {
+  font-family: 'Raleway', sans-serif;
+  margin-top: 3%;
+  font-size: 15px;
+  height: 250px;
+}
+
+img {
+  height: 125%;
+  border-radius: 50%;
+}
+
+.imageMe {
+  position: absolute;
+  float: right;
+  z-index: 10;
+  padding-left: 50%;
+  padding-right: 30%;
+  transform: scale(0.5, 0.5);
+-ms-transform: scale(0.5, 0.5);
+-webkit-transform: scale(0.5, 0.5);
+}
+
+.aboutMeTitle {
+  height: 40px;
+  font-family: "Shrikhand";
+  color: #028ac4;
   text-align: center;
 
+}
+
+.bigboi {
+  height: 500px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.natbus {
+  height: 300px;
+  margin-bottom: 20px;
+  background: linear-gradient(rgba(0, 153, 255,0.07), rgba(0, 153, 255,0.07)),  url(assets/natbus.jpg) center;
+  background-size: cover;
+  margin-right: 10px;
+
+  /*box-shadow: 1px 1px 5px rgba(0,0,0,0.3);*/
+
+}
+
+.navigator {
+  height: 230px;
+  background: url(assets/navigator.jpg) no-repeat right;
+  background-size: cover;
+  margin-bottom: 20px;
+}
+
+.cair {
+  height: 250px;
+  margin-bottom: 20px;
+  background: url(assets/cairscreen2.png) center;
+  background-size: cover;
+}
+
+.skittle {
+  height: 400px;
+  background: linear-gradient(rgba(0, 153, 255,0.1), rgba(0, 153, 255,0.1)), url(assets/skittlemachine.jpg) no-repeat center;
+  background-size: cover;
+  margin-bottom: 20px;
+  margin-right: 20px;
+
+}
+
+
+.lightItUp {
+  height: 300px;
+/*  background: linear-gradient(rgba(0, 153, 255,0.1), rgba(0, 153, 255,0.1)), url(assets/frisbee.jpg) no-repeat right;
+*/  margin-right: 10px;
+  background-size: cover;
+}
+
+.bug {
+  height: 400px;
+  background: url(assets/buggg.jpg) no-repeat top;
+  background-size: cover;
+  margin-bottom: 20px;
+}
+
+.micromouse {
+  height: 500px;
+  background: url(assets/micromouse.jpg);
+  background-size: cover;
+  margin-bottom: 20px;
+  background-position: 30%;
 }
 
 #project-title {
   color: black;
   font-family: "Shrikhand";
   font-size: 30px;
-  
+
   text-align: center;
   position: relative;
   height: 20vh;
@@ -63,18 +289,18 @@ body {
 }
 
 #greeting {
-  font-family: "Shrikhand";
-  font-size: 50px;
-  letter-spacing: 5px;
+font-family: 'Dosis', sans-serif;
+  font-size: 40px;
+  
   text-align: center;
-  color: white;
+  color: #e6fbff;
   position: relative;
 }
 
 
 #home {
-  font-family: "Unica One";
-  font-size: 80px;
+font-family: 'Shrikhand', sans-serif;
+  font-size: 50px;
   letter-spacing: 1px;
   text-align: center;
   position: relative;
@@ -153,9 +379,6 @@ body {
 .text-right{
   text-align: right;
 }
-
-
-
 
 .gf-row {
   width: 100%;
